add endpoint to sync contacts
