# src/main/kotlin/com/wutsi/platform/contact/dto/SyncContactResponse.kt
@@ -1,0 +1,5 @@
+package com.wutsi.platform.contact.dto
+
+public data class SyncContactResponse(
+    public val accountId: Long = 0
+)
