# src/main/kotlin/com/wutsi/platform/contact/entity/PhoneEntity.kt
@@ -1,0 +1,21 @@
+package com.wutsi.platform.contact.entity
+
+import java.time.OffsetDateTime
+import javax.persistence.Entity
+import javax.persistence.GeneratedValue
+import javax.persistence.GenerationType
+import javax.persistence.Id
+import javax.persistence.Table
+
+@Entity
+@Table(name = "T_PHONE")
+data class PhoneEntity(
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    val id: Long? = null,
+
+    val accountId: Long = -1,
+    val tenantId: Long = -1,
+    val number: String = "",
+    val created: OffsetDateTime = OffsetDateTime.now(),
+)
